# brabbit_editor

./: BaseButton.qml  CMakeLists.txt  DockContext.qml  DockController.cpp  DockController.hpp  DockItem.qml  DockListModel.cpp  DockListModel.h  DockListModel.hpp  GlobalContext.qml  LanguageManager.cpp  LanguageManager.hpp  MainWindow.qml  README.md  UiKernal.cpp  UiKernal.hpp  main.cpp  main.qml  qml.qrc  qmldir  translate.hpp  translate.py  translate.qml  translate.xlsx
dock_demo/: .gitignore  CMakeLists.txt
dock_demo/src/: main.cpp
dock_demo/src/brabbit/: main_window.cpp  main_window.hpp  main_window.moc.cpp  main_window.ui  main_window.ui.hpp  translator.cpp  translator.hpp
dock_demo/src/brabbit/util/: translate_tool.hpp
ini/: en_UK.ini  en_US.ini  zh_CN.ini  zh_TW.ini
json/: en_UK.json  en_US.json  zh_CN.json  zh_TW.json
ui/UI/: CMakeLists.txt  UI.qmlproject  UI.qmlproject.qtds  qmlmodules
ui/UI/content/: App.qml  Screen01.ui.qml
